# .cursor

./: .railwayignore  Anchor.toml  ENV_VARIABLES_TEMPLATE.txt  Procfile  RAILWAY_DEPLOYMENT.md  README.md  next.config.ts  nixpacks.toml  package-lock.json  package.json  proxy.ts
app/: globals.css  layout.tsx  page.tsx
app/(auth)/login/: page.tsx
app/(auth)/signup/: page.tsx
app/api/auth/login/: route.ts
app/api/auth/logout/: route.ts
app/api/auth/me/: route.ts
app/api/auth/signup/: route.ts
app/api/bounties/: route.ts
app/api/bounties/[id]/approve-tip/: route.ts
app/api/bounties/[id]/tips/: route.ts
app/api/bounties/my/: route.ts
app/api/tips/submit/: route.ts
app/api/upload/: route.ts
app/app/: layout.tsx  page.tsx
app/app/bounties/: page.tsx
app/app/bounties/create/: page.tsx
app/app/my-bounties/: page.tsx
app/app/my-bounties/[id]/: page.tsx
app/app/profile/: page.tsx
app/app/submit/: page.tsx
app/docs/: page.tsx
app/token/: page.tsx
app/whitepaper/: page.tsx
components/custom/: AnimatedSection.tsx  ApproveTipDialog.tsx  Footer.tsx  LiveActivityFeed.tsx  LoadingSpinner.tsx  Navbar.tsx  TipCard.tsx
hooks/: useScrollReveal.ts
lib/: encryption.ts
lib/ipfs/: client.ts
lib/solana/: connection.ts  transaction-builder.ts  transactions.ts
lib/supabase/: client.ts  schema.sql
lib/supabase/migrations/: add_bounty_payment_fields.sql
lib/zero-connector/: setup.ts
programs/whistlechain/: Cargo.toml
programs/whistlechain/src/: lib.rs
types/: zero-connector.d.ts
